--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,48 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
-
-body{
-  font-family: "Space Grotesk", sans-serif;
+body {
+	font-family: "Space Grotesk", sans-serif;
 }
 
-.waitlist{
-  background-image: url("./assets/image4.jpg");
-  object-fit: cover;
-  transform: 0.3s ease-in-out;
+.waitlist {
+	background-image: url("./assets/image4.jpg");
+	object-fit: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	transform: 8s ease-in-out;
+
+	animation: animateBG 60s ease-in-out infinite alternate-reverse;
+	animation-direction: alternate-reverse;
+	animation-duration: 60s;
+	animation-fill-mode: backwards;
+	animation-iteration-count: infinite;
+	animation-play-state: running;
+	animation-timing-function: ease-in-out;
+}
+
+@keyframes animateBG {
+	0% {
+		background-image: url("./assets/image1.jpg");
+		filter: brightness(80%);
+	}
+	20% {
+		background-image: url("./assets/image4.jpg");
+		filter: brightness(80%);
+	}
+	40% {
+		background-image: url("./assets/image3.jpg");
+		filter: brightness(80%);
+	}
+	60% {
+		background-image: url("./assets/image4.jpg");
+		filter: brightness(80%);
+	}
+	80% {
+		background-image: url("./assets/image5.jpg");
+		filter: brightness(80%);
+	}
+	100% {
+		background-image: url("./assets/image1.jpg");
+		filter: brightness(80%);
+	}
 }
